# Quantum-Swarm

./: .gitignore  README.md  pyproject.toml
archtypes/: archetypes.py  bungalow_1960s.yaml  detached_1990s.yaml  newbuild_2020s.yaml  terrace_victorian_retro.yaml
cop_models/: cosy_9.yaml  daikin_4.yaml  daikin_8.yaml  grant_6.yaml  samsung_6.yaml  vaillant_5.yaml
docs/: QSH_Fleet_Correlation_Technical_Analysis.md  methodology.md  qsh_shoulder_mode_impact.html
engine/: engine.py
fleet/: batch.py  fleet_report.py
qsh_twin.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: generate_yamls.py
twin/: __init__.py  hp_models.py  signal.py  validate.py
twin/archetypes/: __init__.py  flat_purpose.yaml  semi_1970s.yaml  semi_1970s_retro.yaml  terrace_victorian.yaml
twin/cop_models/: __init__.py  cop_model.py  cosy_6.yaml  ecodan_8_5.yaml  generic.yaml
twin/engine/: __init__.py  emitter_model.py  engine.py
twin/fleet/: __init__.py  batch.py  fleet_report.py
twin/tests/: test_energy_balance.py
twin/wc_curves/: __init__.py  cosy_steep.yaml  daikin_moderate.yaml  ecodan_steep.yaml  grant_moderate.yaml  grant_steep.yaml  mcs_generic.yaml  samsung_moderate.yaml  vaillant_flat.yaml  vaillant_moderate.yaml  wc_curves.py
wc_curves/: cosy_flat.yaml  cosy_moderate.yaml  daikin_flat.yaml  daikin_steep.yaml  ecodan_flat.yaml  ecodan_moderate.yaml  grant_flat.yaml  samsung_flat.yaml  samsung_steep.yaml  vaillant_steep.yaml
weather/: belfast.csv  edinburgh.csv  manchester.csv  mild_winter.csv  newcastle.csv  weather.py
(+6 files in other folders)
